# blankCppProject

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/macro/: macroQt.cmake
doc/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt
examples/00_examples/: 00_00_myExample.cpp  CMakeLists.txt
externalLibs/: CMakeLists.txt
externalLibs/include/: CMakeLists.txt  README.md
package/: CMakeLists.txt  README.md
package/core/: CMakeLists.txt
package/core/vcredist/: CMakeLists.txt
resources/scripts/: createBlankCppFiles.py
src/core/: CMakeLists.txt  myClass.cpp  myClass.h
tests/: CMakeLists.txt  run_tests.cpp.in  test_00.h
